Bug 89479 - Assertion for event's target is wrong.
Summary: Assertion for event's target is wrong.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 89073
  Show dependency treegraph
 
Reported: 2012-06-19 09:34 PDT by Hayato Ito
Modified: 2012-06-19 23:30 PDT (History)
6 users (show)

See Also:


Attachments
fix an assertion (2.90 KB, patch)
2012-06-19 09:55 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff
Patch for landing (2.93 KB, patch)
2012-06-19 22:30 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff
Patch for landing (2.93 KB, patch)
2012-06-19 22:51 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-06-19 09:34:06 PDT
An assertion used in EventContext's constructor is wrong.

  ASSERT(!m_target || m_target->toNode() || accessible(m_target->toNode()));

'!' is missing. That should be:

  ASSERT(!m_target || !m_target->toNode() || accessible(m_target->toNode()));
Comment 1 Hayato Ito 2012-06-19 09:55:32 PDT
Created attachment 148351 [details]
fix an assertion
Comment 2 Hayato Ito 2012-06-19 22:30:56 PDT
Created attachment 148504 [details]
Patch for landing
Comment 3 WebKit Review Bot 2012-06-19 22:40:15 PDT
Comment on attachment 148504 [details]
Patch for landing

Rejecting attachment 148504 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1

MORITA Hajime found in /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py.
ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).

Full output: http://queues.webkit.org/results/12995131
Comment 4 Hayato Ito 2012-06-19 22:51:55 PDT
Created attachment 148510 [details]
Patch for landing
Comment 5 WebKit Review Bot 2012-06-19 23:30:20 PDT
Comment on attachment 148510 [details]
Patch for landing

Clearing flags on attachment: 148510

Committed r120806: <http://trac.webkit.org/changeset/120806>
Comment 6 WebKit Review Bot 2012-06-19 23:30:25 PDT
All reviewed patches have been landed.  Closing bug.