Assertion for event's target is wrong. https://bugs.webkit.org/show_bug.cgi?id=89479

Reviewed by Hajime Morita.

Fix an assertion to ensure that event's target is reachable from a current target.

No new tests. Fix an assert condition.

* dom/EventContext.cpp:
(WebCore::EventContext::EventContext):
* dom/EventContext.h:
(EventContext):
(WebCore::EventContext::setRelatedTarget):
(WebCore::EventContext::isUnreachableNode):
(WebCore):
(WebCore::EventContext::isReachable):


Canonical link: https://commits.webkit.org/107408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120806 268f45cc-cd09-0410-ab3c-d52691b4dbfc