Source/WebCore/dom/EventContext.cpp
@@ -42,7 +42,7 @@ EventContext::EventContext(PassRefPtr<Node> node, PassRefPtr<EventTarget> curren
     , m_relatedTarget(0)
 {
     ASSERT(m_node);
-    ASSERT(!m_target || m_target->toNode() || accessible(m_target->toNode()));
+    ASSERT(!isUnreachableNode(m_target.get()));
 }
 
 void EventContext::handleLocalEvents(Event* event) const
